--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<title>Belajar Git - Project 001</title>
 </head>
 <body>
-	<p>Hello Dunia!, Saya sudah belajar Git</p>
-	<p>Belajar Git ternyata cukup menyenangkan</p>
+	<p>Hallo Semua, Saya sedang belajar Git</p>
 </body>
 </html>
